# ncomm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
ncomm/: __init__.py  cli.py  config.py  gitops.py  llm.py  safety.py  scan.py
tests/: test_cli.py  test_config.py  test_gitops.py  test_integration.py  test_llm.py  test_safety.py  test_scan.py
