[project]
name = "ncomm-cli"
version = "0.1.0"
description = "Turn a working tree into well-formed Conventional Commits — group changes, review, commit. AI-assisted."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yiqi Yang" }]
keywords = ["cli", "git", "commit", "conventional-commits", "llm", "deepseek", "terminal"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    # click 8.2 changed Parameter.make_metavar(ctx); older typer's
    # TyperArgument.make_metavar(self) crashes against it. Pin to the
    # compatible line until the floor typer supports click 8.2.
    "click>=8.0,<8.2",
    "rich>=13",
    "httpx>=0.27",
    "prompt-toolkit>=3.0.52",
    "tomli>=2 ; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/decajoin/ncomm"
Repository = "https://github.com/decajoin/ncomm"

[project.scripts]
ncomm = "ncomm.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ncomm"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
